refactor(paper): FAWE-only schematics, rework GUI into builder